<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.davidvaz.bootxperia.fragment.BootFragment">

    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="2dp"
         android:text="@string/warning"
        android:textStyle="bold"
        android:textColor="#ffff001c"
        android:id="@+id/AppTheme" />

    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top"
         android:layout_marginTop="51dp"
         android:layout_marginBottom="2dp"
         android:text="@string/warningbackup"
        android:textColor="#ffff001c"
        android:textIsSelectable="false"
        android:textSize="15dp"
        android:textStyle="normal|bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:orientation="horizontal">

        </LinearLayout>


    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/twrp_flash_button"
        android:text="@string/twrp_flash_button"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="50dp"
        android:clickable="true"
        android:enabled="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/twrp_download_button"
        android:text="@string/twrp_download_button"
        android:layout_above="@+id/twrp_flash_button"
        android:layout_centerHorizontal="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="0dp"
        android:enabled="true"
        android:clickable="true"
        android:textStyle="bold" />

</RelativeLayout>
